# activation_oracles_qwen36

./: .gitignore  pyproject.toml
experiments/: taboo_open_ended_eval.py
nl_probes/: sft.py
nl_probes/configs/: sft_config.py
nl_probes/dataset_classes/: classification_dataset_manager.py
nl_probes/trl_training/: config.py  personaqa_train.py  taboo_train.py
nl_probes/utils/: activation_utils.py  common.py  dataset_utils.py
tests/: test_layer_counts.py  test_peft.py  test_positions.py
