[project]
name = "nl_probes"
version = "0.0.1"
description = "nl_probes"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "accelerate==1.13.0",
    "codetiming",
    "datasets==4.8.4",
    "dill",
    "hydra-core",
    "liger-kernel",
    "numpy",
    "pandas",
    "peft==0.19.1",
    "pyarrow>=24.0.0",
    "fastparquet",
    "pybind11",
    "pylatexenc",
    "pre-commit",
    "ray[default]",
    "tensordict>=0.12.2",
    "torch==2.11.0",
    "kernels>=0.13.0",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.4/flash_attn-2.8.3+cu130torch2.11-cp313-cp313-linux_x86_64.whl",
    "torchdata",
    "transformers==5.6.1",
    # "vllm==0.10.0",
    "einops==0.8.2",
    "wandb==0.26.0",
    "packaging>=26.1",
    "uvicorn",
    "fastapi",
    "typer",
    "latex2sympy2_extended",
    "math_verify",
    "pydantic==2.13.3",
    "regex",
    "python-dotenv",         # Note: the package is "python-dotenv" not "dotenv"
    "slist",
    "plotly",
    "anthropic",
    "openai",
    "tenacity",
    "matplotlib",
    "trl==1.2.0",
    "bitsandbytes==0.49.2",
    "fire",
    "tqdm",
    "pytest",
    "ipykernel",
    "circuitsvis>=1.43.3",
    "jaxtyping",
    "huggingface-hub",
    "rapidfuzz",
    "hf_transfer",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nl_probes", "nl_probes.*"]


[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
