[project]
name = "nl_probes"
version = "0.0.1"
description = "nl_probes"
requires-python = ">=3.13, <3.14"
readme = "README.md"
dependencies = [
    "accelerate==1.13.0",
    "codetiming",
    "datasets==4.8.5",
    "dill",
    "hydra-core",
    "liger-kernel",
    "numpy",
    "pandas",
    "peft==0.19.1",
    "pyarrow",
    "fastparquet",
    "pybind11",
    "pylatexenc",
    "pre-commit",
    "ray[default]",
    "tensordict>=0.12.2",
    "torch==2.11.0",
    "kernels",
    "torchdata",
    "torchvision",
    "transformers==5.7.0",
    # "vllm==0.10.0",
    "einops==0.8.2",
    "wandb==0.26.1",
    "packaging>=26.1",
    "uvicorn",
    "fastapi",
    "typer",
    "latex2sympy2_extended",
    "math_verify",
    "pydantic==2.13.3",
    "regex",
    "python-dotenv",         # Note: the package is "python-dotenv" not "dotenv"
    "slist",
    "plotly",
    "anthropic",
    "openai",
    "tenacity",
    "matplotlib",
    "trl==1.3.0",
    "bitsandbytes==0.49.2",
    "fire",
    "tqdm",
    "pytest",
    "ipykernel",
    "circuitsvis>=1.43.3",
    "jaxtyping",
    "huggingface-hub",
    "rapidfuzz",
    "hf_transfer",
]

[project.optional-dependencies]
flash-attn = [
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.4/flash_attn-2.8.3+cu130torch2.11-cp313-cp313-linux_x86_64.whl",
    "flash-attn-4",
    "flash-linear-attention",
    "causal-conv1d",
]

[tool.uv]
no-build-isolation-package = [
    "causal-conv1d",
    "flash-linear-attention",
    "flash-attn-4",
]
prerelease = "allow"

[tool.uv.extra-build-dependencies]
flash-linear-attention = ["torch"]
flash-attn-4 = ["torch"]
causal-conv1d = ["torch"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nl_probes", "nl_probes.*"]
